[gd_scene load_steps=8 format=3 uid="uid://cis3i36oet384"]

[ext_resource type="Script" uid="uid://c2ehf1v7dm7hy" path="res://Scripts/menu.gd" id="1_vjb58"]
[ext_resource type="Texture2D" uid="uid://cdjwbfloxfbid" path="res://Images/ChatGPT Image 31 ago 2025, 10_09_21.png" id="2_mhnvy"]
[ext_resource type="AudioStream" uid="uid://latdpei267pb" path="res://MusicAndSounds/Music/POL-spinning-gears-short.wav" id="3_con2f"]
[ext_resource type="AudioStream" uid="uid://c8i6exyxx3rwg" path="res://MusicAndSounds/Sounds/confirmation_004.ogg" id="3_mhnvy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vjb58"]
bg_color = Color(0.0616318, 0.00599169, 0.0124352, 0.690196)
corner_detail = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_con2f"]
bg_color = Color(0, 0, 0, 0.690196)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mhnvy"]
bg_color = Color(0, 0, 0, 0.690196)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vjb58")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.435192, 0.435192, 0.435192, 1)

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_mhnvy")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = -68.5
offset_right = 88.0
offset_bottom = 68.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 22

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_vjb58")
text = "JUGAR"

[node name="Character" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_con2f")
text = "PERSONAJE"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_mhnvy")
text = "SALIR"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_con2f")
volume_db = -3.21
autoplay = true

[node name="PlaySound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(152, 66.5)
stream = ExtResource("3_mhnvy")

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Character" to="." method="_on_character_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
